--- a/src/index.css
+++ b/src/index.css
@@ -73,9 +73,108 @@ p {
 }
 
 
+/* //// navbar //// */ 
+.navbar-shehwa{
+display: flex;
+}
+.navbar-shehwa h1{ 
+    font-size: 26px;
+}
+.navbar-shehwa span{
+    /* font-size: 26px; */
+    margin: auto;
+}
+.logo-s {
+  @apply text-4xl font-extrabold leading-none;
+  background: linear-gradient(180deg, #1e90ff 0%, #0a1a2f 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 60px;
+}
+
+/* =========================
+   waterblob
+========================= */
+.water-blob {
+  position: absolute;
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  background: radial-gradient(
+    circle at 30% 30%,
+    rgba(255, 255, 255, 0.9),
+    rgba(200, 200, 200, 0.6),
+    rgba(120, 120, 120, 0.35)
+  );
+  filter: blur(0px);
+  opacity: 1;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  mix-blend-mode: multiply;
+}
+.dark .water-blob {
+  background: radial-gradient(
+    circle at 30% 30%,
+    rgba(255, 255, 255, 0.25),
+    rgba(120, 120, 120, 0.25),
+    rgba(50, 50, 50, 0.3)
+  );
+  mix-blend-mode: screen;
+}
+
+/* =========================
+   social icons
+========================= */
+
+.social-icon {
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  background: #f1f5f9;
+  color: #0f172a;
+  transition: all 0.3s ease;
+}
+
+.dark .social-icon {
+  background: #020617;
+  color: #e5e7eb;
+}
+
+.social-icon:hover {
+  transform: translateY(-4px);
+  background: #2563eb;
+  color: white;
+}
+.social-iconss{
+         border-radius: 10px 10px 0px 0px;
+}
+
+/* =========================
+   loopboard
+========================= */
+@keyframes marquee {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-marquee {
+  animation: marquee 25s linear infinite;
+}
+
+
 /* =========================
    SHADOW
 ========================= */
 .shadow-soft {
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
 }
+
+
