--- a/src/index.css
+++ b/src/index.css
@@ -975,5 +975,141 @@ align-content: stretch;
   color: #fff;
   @apply dark:bg-white dark:text-black
 }
+.footer {
+  /* background: #d9d9d9; */
+  padding-top: 80px;
+  color: #3f3f3f;
+}
+
+/* ===== Marquee ===== */
+
+.footer-marquee-wrapper {
+  position: relative;
+  overflow: hidden;
+  padding: 40px 0;
+}
+
+/* .footer-line {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  height: 3px;
+  background: #3f3f3f;
+  transform: translateY(-50%);
+} */
+
+.footer-marquee {
+  display: flex;
+  white-space: nowrap;
+}
+
+.marquee-content {
+  font-size: clamp(3rem, 7vw, 6rem);
+  font-weight: 900;
+  text-transform: uppercase;
+  padding-right: 100px;
+   @apply dark:text-white;
+}
+
+/* ===== Top Links Section ===== */
+
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  padding: 80px 0;
+  gap: 60px;
+  flex-wrap: wrap;
+}
+
+.footer-column h4 {
+  font-size: 14px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+
+.footer-column ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-column li {
+  margin-bottom: 10px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: 0.2s ease;
+  @apply dark:text-white;
+}
+
+/* .footer-column li:hover {
+  color: #000;
+
+} */
+
+/* ===== Locations Section ===== */
+
+.footer-locations {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 40px;
+  padding-bottom: 60px;
+}
+
+.location h4 {
+  font-size: 14px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.location p {
+  font-size: 13px;
+  margin-bottom: 6px;
+  color: #555;
+}
+
+/* ===== Bottom ===== */
+
+.footer-bottom {
+  text-align: center;
+  padding: 20px;
+  font-size: 13px;
+  border-top: 1px solid #bbb;
+}
+.logo-column .logo-s {
+  font-size: 28px;
+  font-weight: 900;
+}
+
+.footer-desc {
+  font-size: 14px;
+  color: #555;
+}
+
+.social-icons {
+  display: flex;
+  gap: 15px;
+  font-size: 18px;
+  cursor: pointer;
+   @apply dark:text-white;
+}
+
+.social-icons svg {
+  transition: 0.3s ease;
+   @apply dark:text-white;
+}
+
+/* .social-icons svg:hover {
+  transform: translateY(-3px);
+  color: #000;
+} */
+
+.flag-icon {
+  margin-right: 8px;
+  vertical-align: middle;
+    @apply dark:text-white;
+}
+
 
 }
